Update SingleValueFactory and SimpleFactory to support modifiers.

--- a/nbs/builders/scales.ipynb
+++ b/nbs/builders/scales.ipynb
@@ -44,7 +44,7 @@
     "from cjm_fasthtml_tailwind.core.base import (\n",
     "    NamedScale, CONTAINER_SCALES, TailwindScale, \n",
     "    BaseUtility, StandardUtility, DirectionalUtility,\n",
-    "    UtilityFactory, is_numeric_scale, BaseFactory\n",
+    "    UtilityFactory, is_numeric_scale, BaseFactory, SingleValueUtility\n",
     ")"
    ]
   },
@@ -779,7 +779,7 @@
      "output_type": "stream",
      "text": [
       "Generated fractions:\n",
-      "['1/12', '2/12', '1/6', '1/5', '3/12', '1/4', '4/12', '2/6', '1/3', '2/5', '5/12', '3/6', '1/2', '2/4', '6/12', '7/12', '3/5', '8/12', '2/3', '4/6', '3/4', '9/12', '4/5', '5/6', '10/12', '11/12']\n"
+      "['1/12', '2/12', '1/6', '1/5', '1/4', '3/12', '4/12', '1/3', '2/6', '2/5', '5/12', '3/6', '6/12', '2/4', '1/2', '7/12', '3/5', '4/6', '2/3', '8/12', '3/4', '9/12', '4/5', '5/6', '10/12', '11/12']\n"
      ]
     }
    ],
@@ -933,7 +933,7 @@
    "source": [
     "#| export\n",
     "class SimpleFactory(BaseFactory):\n",
-    "    \"\"\"Factory for utilities that are simple string values.\"\"\"\n",
+    "    \"\"\"Factory for utilities that are simple string values with modifier support.\"\"\"\n",
     "    \n",
     "    def __init__(\n",
     "        self,\n",
@@ -944,19 +944,30 @@
     "        doc = doc or \"Factory for simple utility values\"\n",
     "        super().__init__(doc)\n",
     "        self._values = values_dict\n",
+    "        # Cache utility instances for each value\n",
+    "        self._utility_cache = {}\n",
     "    \n",
     "    def __getattr__(\n",
     "        self,\n",
     "        name: str  # The attribute name to look up\n",
-    "    ) -> str:  # The corresponding CSS value from the dictionary\n",
-    "        \"Get CSS value by attribute name, converting underscores to hyphens.\"\n",
+    "    ) -> Union[SingleValueUtility, Any]:  # A SingleValueUtility instance or attribute\n",
+    "        \"Get utility instance by attribute name, converting underscores to hyphens.\"\n",
     "        # Handle underscore to hyphen conversion for multi-word values\n",
     "        key = name.replace(\"_\", \"-\")\n",
+    "        css_value = None\n",
+    "        \n",
     "        if key in self._values:\n",
-    "            return self._values[key]\n",
-    "        # Also check without conversion\n",
-    "        if name in self._values:\n",
-    "            return self._values[name]\n",
+    "            css_value = self._values[key]\n",
+    "        elif name in self._values:\n",
+    "            css_value = self._values[name]\n",
+    "        \n",
+    "        if css_value is not None:\n",
+    "            # Return cached utility instance or create new one\n",
+    "            if css_value not in self._utility_cache:\n",
+    "                from cjm_fasthtml_tailwind.core.base import SingleValueUtility\n",
+    "                self._utility_cache[css_value] = SingleValueUtility(css_value)\n",
+    "            return self._utility_cache[css_value]\n",
+    "        \n",
     "        raise AttributeError(f\"'{self.__class__.__name__}' object has no attribute '{name}'\")\n",
     "    \n",
     "    def get_info(\n",
@@ -965,9 +976,10 @@
     "        \"\"\"Get information about this simple factory.\"\"\"\n",
     "        return {\n",
     "            'description': self._doc,\n",
-    "            'valid_inputs': 'No inputs - access values as attributes',\n",
+    "            'valid_inputs': 'No inputs - access values as attributes with modifier support',\n",
     "            'options': {\n",
-    "                'available_values': list(self._values.keys())\n",
+    "                'available_values': list(self._values.keys()),\n",
+    "                'supports_modifiers': True\n",
     "            }\n",
     "        }"
    ]
@@ -982,12 +994,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ SimpleFactory tests passed!\n"
+      "✅ SimpleFactory with modifiers tests passed!\n"
      ]
     }
    ],
    "source": [
-    "# Test SimpleFactory\n",
+    "# Test SimpleFactory with modifier support\n",
     "test_values = {\n",
     "    \"auto\": \"auto-value\",\n",
     "    \"none\": \"none-value\",\n",
@@ -995,11 +1007,27 @@
     "}\n",
     "\n",
     "factory = SimpleFactory(test_values)\n",
-    "assert factory.auto == \"auto-value\"\n",
-    "assert factory.none == \"none-value\"\n",
-    "assert factory.multi_word == \"multi-word-value\"  # Underscore converted to hyphen\n",
     "\n",
-    "print(\"✅ SimpleFactory tests passed!\")"
+    "# Test basic access (now returns utilities)\n",
+    "assert str(factory.auto) == \"auto-value\"\n",
+    "assert str(factory.none) == \"none-value\"\n",
+    "assert str(factory.multi_word) == \"multi-word-value\"\n",
+    "\n",
+    "# Test with modifiers\n",
+    "assert str(factory.auto.hover) == \"hover:auto-value\"\n",
+    "assert str(factory.none.md) == \"md:none-value\"\n",
+    "assert str(factory.multi_word.dark) == \"dark:multi-word-value\"\n",
+    "\n",
+    "# Test chained modifiers\n",
+    "assert str(factory.auto.hover.lg) == \"lg:hover:auto-value\"\n",
+    "assert str(factory.none.dark.focus) == \"focus:dark:none-value\"\n",
+    "\n",
+    "# Test that cached instances work correctly\n",
+    "auto1 = factory.auto\n",
+    "auto2 = factory.auto\n",
+    "assert auto1 is auto2  # Should be the same cached instance\n",
+    "\n",
+    "print(\"✅ SimpleFactory with modifiers tests passed!\")"
    ]
   },
   {
