--- a/nbs/core/base.ipynb
+++ b/nbs/core/base.ipynb
@@ -1456,8 +1456,51 @@
    "outputs": [],
    "source": [
     "#| export\n",
+    "class SingleValueUtility(BaseUtility, ModifierMixin):\n",
+    "    \"\"\"A utility that represents a single fixed value.\"\"\"\n",
+    "    \n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        value: str  # The complete utility class string (e.g., \"container\", \"sr-only\")\n",
+    "    ):\n",
+    "        \"\"\"Initialize with a complete utility value.\"\"\"\n",
+    "        # For single values, the entire value is the prefix\n",
+    "        super().__init__(value)\n",
+    "        # No additional value needed\n",
+    "        self._value = None\n",
+    "    \n",
+    "    def _format_value(\n",
+    "        self,\n",
+    "        value: TailwindValue  # Not used for single value utilities\n",
+    "    ) -> str:  # Empty string since value is in prefix\n",
+    "        \"\"\"Single value utilities don't format values.\"\"\"\n",
+    "        return \"\"\n",
+    "    \n",
+    "    def _build_class(\n",
+    "        self,\n",
+    "        value: Optional[TailwindValue] = None  # Ignored for single value utilities\n",
+    "    ) -> str:  # The complete CSS class string with modifiers\n",
+    "        \"\"\"Build the complete CSS class string.\"\"\"\n",
+    "        # For single values, the prefix IS the class\n",
+    "        base_class = self.prefix\n",
+    "        \n",
+    "        # Apply modifiers\n",
+    "        if self._modifiers:\n",
+    "            return \":\".join(self._modifiers + [base_class])\n",
+    "        \n",
+    "        return base_class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "sxd2j79pby",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
     "class SingleValueFactory(BaseFactory):\n",
-    "    \"\"\"Factory for a single utility class string with documentation.\"\"\"\n",
+    "    \"\"\"Factory for a single utility class with modifier support.\"\"\"\n",
     "    \n",
     "    def __init__(\n",
     "        self,\n",
@@ -1467,6 +1510,8 @@
     "        \"\"\"Initialize with a value and documentation.\"\"\"\n",
     "        super().__init__(doc)\n",
     "        self._value = value\n",
+    "        # Create a cached instance for property access\n",
+    "        self._instance = SingleValueUtility(value)\n",
     "    \n",
     "    def __str__(\n",
     "        self\n",
@@ -1476,9 +1521,9 @@
     "    \n",
     "    def __call__(\n",
     "        self\n",
-    "    ) -> str:  # The utility class string\n",
-    "        \"\"\"Return the utility class string when called.\"\"\"\n",
-    "        return self._value\n",
+    "    ) -> SingleValueUtility:  # A SingleValueUtility instance\n",
+    "        \"\"\"Return a new SingleValueUtility instance when called.\"\"\"\n",
+    "        return SingleValueUtility(self._value)\n",
     "    \n",
     "    def build(\n",
     "        self\n",
@@ -1486,15 +1531,34 @@
     "        \"\"\"Build and return the utility class string.\"\"\"\n",
     "        return self._value\n",
     "    \n",
+    "    # Delegate modifier properties to the cached instance\n",
+    "    def __getattr__(\n",
+    "        self,\n",
+    "        name: str  # Attribute name to delegate\n",
+    "    ) -> Any:  # The result from the cached instance\n",
+    "        \"\"\"Delegate modifier access to the cached instance.\"\"\"\n",
+    "        # Check if it's a modifier property\n",
+    "        if hasattr(self._instance, name):\n",
+    "            attr = getattr(self._instance, name)\n",
+    "            # If it's a property or method that returns a utility, we need to handle it\n",
+    "            if callable(attr) or isinstance(attr, property):\n",
+    "                # Get the actual value\n",
+    "                result = getattr(self._instance, name)\n",
+    "                if isinstance(result, BaseUtility):\n",
+    "                    return result\n",
+    "            return attr\n",
+    "        raise AttributeError(f\"'{self.__class__.__name__}' object has no attribute '{name}'\")\n",
+    "    \n",
     "    def get_info(\n",
     "        self\n",
     "    ) -> Dict[str, Any]:  # Dictionary with factory information\n",
     "        \"\"\"Get information about this single-value factory.\"\"\"\n",
     "        return {\n",
     "            'description': self._doc,\n",
-    "            'valid_inputs': 'No inputs - returns a fixed value',\n",
+    "            'valid_inputs': 'No inputs - returns a fixed value with modifier support',\n",
     "            'options': {\n",
-    "                'value': self._value\n",
+    "                'value': self._value,\n",
+    "                'supports_modifiers': True\n",
     "            }\n",
     "        }"
    ]
@@ -1509,7 +1573,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ SingleValueFactory tests passed!\n"
+      "✅ SingleValueFactory with modifiers tests passed!\n"
      ]
     }
    ],
@@ -1522,15 +1586,33 @@
     "\n",
     "# Test various ways to use it\n",
     "assert str(container) == \"container\"\n",
-    "assert container() == \"container\"\n",
+    "assert str(container()) == \"container\"  # Now returns a utility instance\n",
     "assert container.build() == \"container\"\n",
     "assert container.describe() == \"Responsive container with breakpoint-based max-widths\"\n",
+    "\n",
+    "# Test with modifiers\n",
+    "assert str(container.hover) == \"hover:container\"\n",
+    "assert str(container.md) == \"md:container\"\n",
+    "assert str(container.dark) == \"dark:container\"\n",
+    "\n",
+    "# Test chained modifiers\n",
+    "assert str(container.hover.md) == \"md:hover:container\"\n",
+    "assert str(container.dark.lg) == \"lg:dark:container\"\n",
+    "\n",
+    "# Test calling with modifiers\n",
+    "container_util = container()\n",
+    "assert str(container_util.hover) == \"hover:container\"\n",
+    "assert str(container_util.focus.dark) == \"dark:focus:container\"\n",
     "\n",
     "# Test in combine_classes\n",
     "result = combine_classes(container, \"mx-auto\", \"px-4\")\n",
     "assert result == \"container mx-auto px-4\"\n",
     "\n",
-    "print(\"✅ SingleValueFactory tests passed!\")"
+    "# Test with modifiers in combine_classes\n",
+    "result = combine_classes(container.hover, container.md, \"mx-auto\")\n",
+    "assert result == \"hover:container md:container mx-auto\"\n",
+    "\n",
+    "print(\"✅ SingleValueFactory with modifiers tests passed!\")"
    ]
   },
   {
