--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -109,73 +109,73 @@
     "    builders_colors --> core_base\n",
     "    builders_scales --> core_base\n",
     "    cli_example_discovery --> cli_utils\n",
-    "    cli_explorer --> cli_utils\n",
-    "    cli_explorer --> cli_factory_extraction\n",
-    "    cli_explorer --> cli_test_code\n",
-    "    cli_explorer --> cli_search\n",
-    "    cli_explorer --> cli_core_utils_discovery\n",
     "    cli_explorer --> cli_pattern_scanner\n",
-    "    cli_explorer --> cli_helper_discovery\n",
-    "    cli_explorer --> cli_imports\n",
     "    cli_explorer --> cli_example_discovery\n",
+    "    cli_explorer --> cli_search\n",
+    "    cli_explorer --> cli_factory_extraction\n",
+    "    cli_explorer --> cli_utils\n",
+    "    cli_explorer --> cli_helper_discovery\n",
+    "    cli_explorer --> cli_test_code\n",
+    "    cli_explorer --> cli_core_utils_discovery\n",
+    "    cli_explorer --> cli_imports\n",
     "    cli_factory_extraction --> cli_utils\n",
     "    cli_factory_extraction --> core_base\n",
     "    cli_helper_discovery --> cli_utils\n",
     "    cli_helper_discovery --> cli_example_discovery\n",
-    "    cli_imports --> cli_core_utils_discovery\n",
-    "    cli_imports --> cli_helper_discovery\n",
     "    cli_imports --> cli_factory_extraction\n",
+    "    cli_imports --> cli_helper_discovery\n",
+    "    cli_imports --> cli_core_utils_discovery\n",
     "    cli_imports --> cli_utils\n",
-    "    cli_search --> cli_helper_discovery\n",
     "    cli_search --> cli_utils\n",
     "    cli_search --> cli_factory_extraction\n",
+    "    cli_search --> cli_helper_discovery\n",
     "    cli_search --> cli_example_discovery\n",
-    "    cli_test_code --> cli_helper_discovery\n",
-    "    cli_test_code --> cli_factory_extraction\n",
     "    cli_test_code --> cli_utils\n",
+    "    cli_test_code --> cli_factory_extraction\n",
+    "    cli_test_code --> cli_helper_discovery\n",
+    "    core_testing --> utilities_sizing\n",
     "    core_testing --> utilities_spacing\n",
     "    core_testing --> utilities_layout\n",
     "    core_testing --> utilities_flexbox_and_grid\n",
-    "    core_testing --> utilities_sizing\n",
-    "    core_testing --> core_base\n",
     "    core_testing --> core_resources\n",
+    "    core_testing --> core_base\n",
     "    utilities_accessibility --> utilities_layout\n",
-    "    utilities_accessibility --> builders_scales\n",
     "    utilities_accessibility --> core_base\n",
-    "    utilities_backgrounds --> builders_colors\n",
+    "    utilities_accessibility --> builders_scales\n",
     "    utilities_backgrounds --> core_base\n",
     "    utilities_backgrounds --> builders_scales\n",
+    "    utilities_backgrounds --> builders_colors\n",
     "    utilities_borders --> core_base\n",
     "    utilities_borders --> builders_scales\n",
     "    utilities_borders --> builders_colors\n",
-    "    utilities_effects --> builders_colors\n",
     "    utilities_effects --> core_base\n",
+    "    utilities_effects --> builders_colors\n",
     "    utilities_effects --> builders_scales\n",
-    "    utilities_filters --> builders_colors\n",
-    "    utilities_filters --> builders_scales\n",
     "    utilities_filters --> core_base\n",
+    "    utilities_filters --> builders_scales\n",
+    "    utilities_filters --> builders_colors\n",
     "    utilities_flexbox_and_grid --> builders_scales\n",
     "    utilities_flexbox_and_grid --> core_base\n",
-    "    utilities_interactivity --> builders_colors\n",
-    "    utilities_interactivity --> core_base\n",
     "    utilities_interactivity --> builders_scales\n",
-    "    utilities_layout --> builders_scales\n",
+    "    utilities_interactivity --> core_base\n",
+    "    utilities_interactivity --> builders_colors\n",
     "    utilities_layout --> core_base\n",
-    "    utilities_sizing --> core_base\n",
+    "    utilities_layout --> builders_scales\n",
     "    utilities_sizing --> builders_scales\n",
-    "    utilities_spacing --> core_base\n",
+    "    utilities_sizing --> core_base\n",
     "    utilities_spacing --> builders_scales\n",
+    "    utilities_spacing --> core_base\n",
+    "    utilities_svg --> core_base\n",
     "    utilities_svg --> builders_colors\n",
     "    utilities_svg --> builders_scales\n",
-    "    utilities_svg --> core_base\n",
-    "    utilities_tables --> core_base\n",
     "    utilities_tables --> builders_scales\n",
+    "    utilities_tables --> core_base\n",
     "    utilities_transforms --> builders_scales\n",
     "    utilities_transforms --> core_base\n",
-    "    utilities_transitions_and_animation --> builders_scales\n",
     "    utilities_transitions_and_animation --> core_base\n",
-    "    utilities_typography --> core_base\n",
+    "    utilities_transitions_and_animation --> builders_scales\n",
     "    utilities_typography --> builders_scales\n",
+    "    utilities_typography --> core_base\n",
     "    utilities_typography --> builders_colors\n",
     "```\n",
     "\n",
@@ -273,7 +273,7 @@
     "  cjm-tailwind-explore factories -m accessibility       # Explore accessibility utilities\n",
     "  cjm-tailwind-explore factory accessibility forced_color_adjust          # Learn about forced_color_adjust factory\n",
     "  cjm-tailwind-explore example accessibility forced_color_adjust      # See usage examples\n",
-    "  cjm-tailwind-explore test-code 'print(str(sr_only))'   # Test your understanding\n",
+    "  cjm-tailwind-explore test-code 'print(str(forced_color_adjust.auto))'   # Test your understanding\n",
     "  cjm-tailwind-explore scan app.py                # Analyze existing code\n",
     "\n",
     "```\n",
@@ -633,6 +633,7 @@
     "    BaseFactory,\n",
     "    UtilityFactory,\n",
     "    combine_classes,\n",
+    "    SingleValueUtility,\n",
     "    SingleValueFactory,\n",
     "    Direction,\n",
     "    DirectionalUtility,\n",
@@ -1060,13 +1061,28 @@
     "```\n",
     "\n",
     "```python\n",
+    "class SingleValueUtility:\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        value: str  # The complete utility class string (e.g., \"container\", \"sr-only\")\n",
+    "    )\n",
+    "    \"A utility that represents a single fixed value.\"\n",
+    "    \n",
+    "    def __init__(\n",
+    "            self,\n",
+    "            value: str  # The complete utility class string (e.g., \"container\", \"sr-only\")\n",
+    "        )\n",
+    "        \"Initialize with a complete utility value.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
     "class SingleValueFactory:\n",
     "    def __init__(\n",
     "        self,\n",
     "        value: str,  # The utility class string (e.g., \"container\")\n",
     "        doc: str  # Documentation describing what this utility does\n",
     "    )\n",
-    "    \"Factory for a single utility class string with documentation.\"\n",
+    "    \"Factory for a single utility class with modifier support.\"\n",
     "    \n",
     "    def __init__(\n",
     "            self,\n",
@@ -3932,6 +3948,7 @@
     "    OverscrollFactory,\n",
     "    test_layout_other_utilities_examples,\n",
     "    test_layout_practical_examples,\n",
+    "    test_layout_enhanced_factories_examples,\n",
     "    test_layout_modifier_examples,\n",
     "    test_layout_factory_documentation,\n",
     "    center_absolute,\n",
@@ -4014,6 +4031,12 @@
     "def test_layout_practical_examples(\n",
     ")\n",
     "    \"Test layout utilities in practical FastHTML component examples.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_layout_enhanced_factories_examples(\n",
+    ")\n",
+    "    \"Test enhanced factories with modifier support in practical examples.\"\n",
     "```\n",
     "\n",
     "```python\n",
@@ -4763,7 +4786,7 @@
     "        values_dict: Dict[str, str],  # Dictionary mapping attribute names to CSS values\n",
     "        doc: Optional[str] = None  # Optional documentation string\n",
     "    )\n",
-    "    \"Factory for utilities that are simple string values.\"\n",
+    "    \"Factory for utilities that are simple string values with modifier support.\"\n",
     "    \n",
     "    def __init__(\n",
     "            self,\n",
@@ -5068,6 +5091,7 @@
     "    margin,\n",
     "    test_spacing_helper_examples,\n",
     "    test_spacing_modifier_examples,\n",
+    "    test_spacing_enhanced_factory_examples,\n",
     "    test_spacing_factory_documentation\n",
     ")\n",
     "```\n",
@@ -5165,6 +5189,12 @@
     "def test_spacing_modifier_examples(\n",
     ")\n",
     "    \"Test spacing utilities with modifiers for conditional styling.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_spacing_enhanced_factory_examples(\n",
+    ")\n",
+    "    \"Test enhanced SingleValueFactory support in spacing utilities.\"\n",
     "```\n",
     "\n",
     "```python\n",
@@ -6055,8 +6085,8 @@
     "def test_transitions_and_animation_timing_examples():\n",
     "    \"\"\"Test transition timing function utilities.\"\"\"\n",
     "    # Test predefined easing functions\n",
-    "    assert ease.linear == \"ease-linear\"\n",
-    "    assert ease._in == \"ease-in\"  # Note: 'in' is a Python keyword, so we use 'in_'\n",
+    "    assert str(ease.linear) == \"ease-linear\"\n",
+    "    assert str(ease._in) == \"ease-in\"  # Note: 'in' is a Python keyword, so we use 'in_'\n",
     "    \"Test transition timing function utilities.\"\n",
     "```\n",
     "\n",
