--- a/nbs/utilities/accessibility.ipynb
+++ b/nbs/utilities/accessibility.ipynb
@@ -89,8 +89,8 @@
     "):\n",
     "    \"\"\"Test forced color adjust utilities.\"\"\"\n",
     "    # Test forced color adjust utilities with dot notation\n",
-    "    assert forced_color_adjust.auto == \"forced-color-adjust-auto\"\n",
-    "    assert forced_color_adjust.none == \"forced-color-adjust-none\"\n",
+    "    assert str(forced_color_adjust.auto) == \"forced-color-adjust-auto\"\n",
+    "    assert str(forced_color_adjust.none) == \"forced-color-adjust-none\"\n",
     "\n",
     "# Run the tests\n",
     "test_accessibility_forced_color_adjust_examples()"
