--- a/nbs/utilities/backgrounds.ipynb
+++ b/nbs/utilities/backgrounds.ipynb
@@ -86,9 +86,9 @@
     "#| export\n",
     "def test_backgrounds_attachment_examples():\n",
     "    \"\"\"Test background attachment utilities.\"\"\"\n",
-    "    assert bg_attachment.fixed == \"bg-fixed\"\n",
-    "    assert bg_attachment.local == \"bg-local\"\n",
-    "    assert bg_attachment.scroll == \"bg-scroll\"\n",
+    "    assert str(bg_attachment.fixed) == \"bg-fixed\"\n",
+    "    assert str(bg_attachment.local) == \"bg-local\"\n",
+    "    assert str(bg_attachment.scroll) == \"bg-scroll\"\n",
     "\n",
     "# Run the tests\n",
     "test_backgrounds_attachment_examples()"
@@ -133,10 +133,10 @@
     "#| export\n",
     "def test_backgrounds_clip_examples():\n",
     "    \"\"\"Test background clip utilities.\"\"\"\n",
-    "    assert bg_clip.border == \"bg-clip-border\"\n",
-    "    assert bg_clip.padding == \"bg-clip-padding\"\n",
-    "    assert bg_clip.content == \"bg-clip-content\"\n",
-    "    assert bg_clip.text == \"bg-clip-text\"\n",
+    "    assert str(bg_clip.border) == \"bg-clip-border\"\n",
+    "    assert str(bg_clip.padding) == \"bg-clip-padding\"\n",
+    "    assert str(bg_clip.content) == \"bg-clip-content\"\n",
+    "    assert str(bg_clip.text) == \"bg-clip-text\"\n",
     "\n",
     "# Run the tests\n",
     "test_backgrounds_clip_examples()"
@@ -903,9 +903,9 @@
     "#| export\n",
     "def test_backgrounds_origin_examples():\n",
     "    \"\"\"Test background origin utilities.\"\"\"\n",
-    "    assert bg_origin.border == \"bg-origin-border\"\n",
-    "    assert bg_origin.padding == \"bg-origin-padding\"\n",
-    "    assert bg_origin.content == \"bg-origin-content\"\n",
+    "    assert str(bg_origin.border) == \"bg-origin-border\"\n",
+    "    assert str(bg_origin.padding) == \"bg-origin-padding\"\n",
+    "    assert str(bg_origin.content) == \"bg-origin-content\"\n",
     "\n",
     "# Run the tests\n",
     "test_backgrounds_origin_examples()"
@@ -955,11 +955,11 @@
     "#| export\n",
     "def test_backgrounds_position_examples():\n",
     "    \"\"\"Test background position utilities.\"\"\"\n",
-    "    assert bg_position.top_left == \"bg-top-left\"\n",
-    "    assert bg_position.top == \"bg-top\"\n",
-    "    assert bg_position.top_right == \"bg-top-right\"\n",
-    "    assert bg_position.center == \"bg-center\"\n",
-    "    assert bg_position.bottom == \"bg-bottom\"\n",
+    "    assert str(bg_position.top_left) == \"bg-top-left\"\n",
+    "    assert str(bg_position.top) == \"bg-top\"\n",
+    "    assert str(bg_position.top_right) == \"bg-top-right\"\n",
+    "    assert str(bg_position.center) == \"bg-center\"\n",
+    "    assert str(bg_position.bottom) == \"bg-bottom\"\n",
     "\n",
     "# Run the tests\n",
     "test_backgrounds_position_examples()"
@@ -1006,10 +1006,10 @@
     "#| export\n",
     "def test_backgrounds_repeat_examples():\n",
     "    \"\"\"Test background repeat utilities.\"\"\"\n",
-    "    assert bg_repeat.repeat == \"bg-repeat\"\n",
-    "    assert bg_repeat.repeat_x == \"bg-repeat-x\"\n",
-    "    assert bg_repeat.repeat_y == \"bg-repeat-y\"\n",
-    "    assert bg_repeat.no_repeat == \"bg-no-repeat\"\n",
+    "    assert str(bg_repeat.repeat) == \"bg-repeat\"\n",
+    "    assert str(bg_repeat.repeat_x) == \"bg-repeat-x\"\n",
+    "    assert str(bg_repeat.repeat_y) == \"bg-repeat-y\"\n",
+    "    assert str(bg_repeat.no_repeat) == \"bg-no-repeat\"\n",
     "\n",
     "# Run the tests\n",
     "test_backgrounds_repeat_examples()"
@@ -1053,9 +1053,9 @@
     "#| export\n",
     "def test_backgrounds_size_examples():\n",
     "    \"\"\"Test background size utilities.\"\"\"\n",
-    "    assert bg_size.auto == \"bg-auto\"\n",
-    "    assert bg_size.cover == \"bg-cover\"\n",
-    "    assert bg_size.contain == \"bg-contain\"\n",
+    "    assert str(bg_size.auto) == \"bg-auto\"\n",
+    "    assert str(bg_size.cover) == \"bg-cover\"\n",
+    "    assert str(bg_size.contain) == \"bg-contain\"\n",
     "\n",
     "# Run the tests\n",
     "test_backgrounds_size_examples()"
