--- a/nbs/utilities/borders.ipynb
+++ b/nbs/utilities/borders.ipynb
@@ -1047,12 +1047,12 @@
     "#| export\n",
     "def test_borders_style_examples():\n",
     "    \"\"\"Test border style utilities.\"\"\"\n",
-    "    assert border_style.solid == \"border-solid\"\n",
-    "    assert border_style.dashed == \"border-dashed\"\n",
-    "    assert border_style.dotted == \"border-dotted\"\n",
-    "    assert border_style.double == \"border-double\"\n",
-    "    assert border_style.hidden == \"border-hidden\"\n",
-    "    assert border_style.none == \"border-none\"\n",
+    "    assert str(border_style.solid) == \"border-solid\"\n",
+    "    assert str(border_style.dashed) == \"border-dashed\"\n",
+    "    assert str(border_style.dotted) == \"border-dotted\"\n",
+    "    assert str(border_style.double) == \"border-double\"\n",
+    "    assert str(border_style.hidden) == \"border-hidden\"\n",
+    "    assert str(border_style.none) == \"border-none\"\n",
     "\n",
     "# Run the tests\n",
     "test_borders_style_examples()"
@@ -1116,12 +1116,12 @@
     "#| export\n",
     "def test_borders_divide_style_examples():\n",
     "    \"\"\"Test divide style utilities.\"\"\"\n",
-    "    assert divide_style.solid == \"divide-solid\"\n",
-    "    assert divide_style.dashed == \"divide-dashed\"\n",
-    "    assert divide_style.dotted == \"divide-dotted\"\n",
-    "    assert divide_style.double == \"divide-double\"\n",
-    "    assert divide_style.hidden == \"divide-hidden\"\n",
-    "    assert divide_style.none == \"divide-none\"\n",
+    "    assert str(divide_style.solid) == \"divide-solid\"\n",
+    "    assert str(divide_style.dashed) == \"divide-dashed\"\n",
+    "    assert str(divide_style.dotted) == \"divide-dotted\"\n",
+    "    assert str(divide_style.double) == \"divide-double\"\n",
+    "    assert str(divide_style.hidden) == \"divide-hidden\"\n",
+    "    assert str(divide_style.none) == \"divide-none\"\n",
     "\n",
     "# Run the tests\n",
     "test_borders_divide_style_examples()"
@@ -1439,11 +1439,11 @@
     "#| export\n",
     "def test_borders_outline_style_examples():\n",
     "    \"\"\"Test outline style utilities.\"\"\"\n",
-    "    assert outline_style.solid == \"outline-solid\"\n",
-    "    assert outline_style.dashed == \"outline-dashed\"\n",
-    "    assert outline_style.dotted == \"outline-dotted\"\n",
-    "    assert outline_style.double == \"outline-double\"\n",
-    "    assert outline_style.none == \"outline-none\"\n",
+    "    assert str(outline_style.solid) == \"outline-solid\"\n",
+    "    assert str(outline_style.dashed) == \"outline-dashed\"\n",
+    "    assert str(outline_style.dotted) == \"outline-dotted\"\n",
+    "    assert str(outline_style.double) == \"outline-double\"\n",
+    "    assert str(outline_style.none) == \"outline-none\"\n",
     "    \n",
     "    # Test special outline-hidden utility\n",
     "    assert str(outline_hidden) == \"outline-hidden\"\n",
