--- a/nbs/utilities/effects.ipynb
+++ b/nbs/utilities/effects.ipynb
@@ -1959,24 +1959,24 @@
     "#| export\n",
     "def test_effects_mix_blend_examples():\n",
     "    \"\"\"Test mix blend mode utilities.\"\"\"\n",
-    "    assert mix_blend.normal == \"mix-blend-normal\"\n",
-    "    assert mix_blend.multiply == \"mix-blend-multiply\"\n",
-    "    assert mix_blend.screen == \"mix-blend-screen\"\n",
-    "    assert mix_blend.overlay == \"mix-blend-overlay\"\n",
-    "    assert mix_blend.darken == \"mix-blend-darken\"\n",
-    "    assert mix_blend.lighten == \"mix-blend-lighten\"\n",
-    "    assert mix_blend.color_dodge == \"mix-blend-color-dodge\"\n",
-    "    assert mix_blend.color_burn == \"mix-blend-color-burn\"\n",
-    "    assert mix_blend.hard_light == \"mix-blend-hard-light\"\n",
-    "    assert mix_blend.soft_light == \"mix-blend-soft-light\"\n",
-    "    assert mix_blend.difference == \"mix-blend-difference\"\n",
-    "    assert mix_blend.exclusion == \"mix-blend-exclusion\"\n",
-    "    assert mix_blend.hue == \"mix-blend-hue\"\n",
-    "    assert mix_blend.saturation == \"mix-blend-saturation\"\n",
-    "    assert mix_blend.color == \"mix-blend-color\"\n",
-    "    assert mix_blend.luminosity == \"mix-blend-luminosity\"\n",
-    "    assert mix_blend.plus_darker == \"mix-blend-plus-darker\"\n",
-    "    assert mix_blend.plus_lighter == \"mix-blend-plus-lighter\"\n",
+    "    assert str(mix_blend.normal) == \"mix-blend-normal\"\n",
+    "    assert str(mix_blend.multiply) == \"mix-blend-multiply\"\n",
+    "    assert str(mix_blend.screen) == \"mix-blend-screen\"\n",
+    "    assert str(mix_blend.overlay) == \"mix-blend-overlay\"\n",
+    "    assert str(mix_blend.darken) == \"mix-blend-darken\"\n",
+    "    assert str(mix_blend.lighten) == \"mix-blend-lighten\"\n",
+    "    assert str(mix_blend.color_dodge) == \"mix-blend-color-dodge\"\n",
+    "    assert str(mix_blend.color_burn) == \"mix-blend-color-burn\"\n",
+    "    assert str(mix_blend.hard_light) == \"mix-blend-hard-light\"\n",
+    "    assert str(mix_blend.soft_light) == \"mix-blend-soft-light\"\n",
+    "    assert str(mix_blend.difference) == \"mix-blend-difference\"\n",
+    "    assert str(mix_blend.exclusion) == \"mix-blend-exclusion\"\n",
+    "    assert str(mix_blend.hue) == \"mix-blend-hue\"\n",
+    "    assert str(mix_blend.saturation) == \"mix-blend-saturation\"\n",
+    "    assert str(mix_blend.color) == \"mix-blend-color\"\n",
+    "    assert str(mix_blend.luminosity) == \"mix-blend-luminosity\"\n",
+    "    assert str(mix_blend.plus_darker) == \"mix-blend-plus-darker\"\n",
+    "    assert str(mix_blend.plus_lighter) == \"mix-blend-plus-lighter\"\n",
     "\n",
     "# Run the tests\n",
     "test_effects_mix_blend_examples()"
@@ -2033,22 +2033,22 @@
     "#| export\n",
     "def test_effects_bg_blend_examples():\n",
     "    \"\"\"Test background blend mode utilities.\"\"\"\n",
-    "    assert bg_blend.normal == \"bg-blend-normal\"\n",
-    "    assert bg_blend.multiply == \"bg-blend-multiply\"\n",
-    "    assert bg_blend.screen == \"bg-blend-screen\"\n",
-    "    assert bg_blend.overlay == \"bg-blend-overlay\"\n",
-    "    assert bg_blend.darken == \"bg-blend-darken\"\n",
-    "    assert bg_blend.lighten == \"bg-blend-lighten\"\n",
-    "    assert bg_blend.color_dodge == \"bg-blend-color-dodge\"\n",
-    "    assert bg_blend.color_burn == \"bg-blend-color-burn\"\n",
-    "    assert bg_blend.hard_light == \"bg-blend-hard-light\"\n",
-    "    assert bg_blend.soft_light == \"bg-blend-soft-light\"\n",
-    "    assert bg_blend.difference == \"bg-blend-difference\"\n",
-    "    assert bg_blend.exclusion == \"bg-blend-exclusion\"\n",
-    "    assert bg_blend.hue == \"bg-blend-hue\"\n",
-    "    assert bg_blend.saturation == \"bg-blend-saturation\"\n",
-    "    assert bg_blend.color == \"bg-blend-color\"\n",
-    "    assert bg_blend.luminosity == \"bg-blend-luminosity\"\n",
+    "    assert str(bg_blend.normal) == \"bg-blend-normal\"\n",
+    "    assert str(bg_blend.multiply) == \"bg-blend-multiply\"\n",
+    "    assert str(bg_blend.screen) == \"bg-blend-screen\"\n",
+    "    assert str(bg_blend.overlay) == \"bg-blend-overlay\"\n",
+    "    assert str(bg_blend.darken) == \"bg-blend-darken\"\n",
+    "    assert str(bg_blend.lighten) == \"bg-blend-lighten\"\n",
+    "    assert str(bg_blend.color_dodge) == \"bg-blend-color-dodge\"\n",
+    "    assert str(bg_blend.color_burn) == \"bg-blend-color-burn\"\n",
+    "    assert str(bg_blend.hard_light) == \"bg-blend-hard-light\"\n",
+    "    assert str(bg_blend.soft_light) == \"bg-blend-soft-light\"\n",
+    "    assert str(bg_blend.difference) == \"bg-blend-difference\"\n",
+    "    assert str(bg_blend.exclusion) == \"bg-blend-exclusion\"\n",
+    "    assert str(bg_blend.hue) == \"bg-blend-hue\"\n",
+    "    assert str(bg_blend.saturation) == \"bg-blend-saturation\"\n",
+    "    assert str(bg_blend.color) == \"bg-blend-color\"\n",
+    "    assert str(bg_blend.luminosity) == \"bg-blend-luminosity\"\n",
     "\n",
     "# Run the tests\n",
     "test_effects_bg_blend_examples()"
@@ -2106,13 +2106,13 @@
     "#| export\n",
     "def test_effects_mask_clip_examples():\n",
     "    \"\"\"Test mask clip utilities.\"\"\"\n",
-    "    assert mask_clip.border == \"mask-clip-border\"\n",
-    "    assert mask_clip.padding == \"mask-clip-padding\"\n",
-    "    assert mask_clip.content == \"mask-clip-content\"\n",
-    "    assert mask_clip.fill == \"mask-clip-fill\"\n",
-    "    assert mask_clip.stroke == \"mask-clip-stroke\"\n",
-    "    assert mask_clip.view == \"mask-clip-view\"\n",
-    "    assert mask_clip.no_clip == \"mask-no-clip\"\n",
+    "    assert str(mask_clip.border) == \"mask-clip-border\"\n",
+    "    assert str(mask_clip.padding) == \"mask-clip-padding\"\n",
+    "    assert str(mask_clip.content) == \"mask-clip-content\"\n",
+    "    assert str(mask_clip.fill) == \"mask-clip-fill\"\n",
+    "    assert str(mask_clip.stroke) == \"mask-clip-stroke\"\n",
+    "    assert str(mask_clip.view) == \"mask-clip-view\"\n",
+    "    assert str(mask_clip.no_clip) == \"mask-no-clip\"\n",
     "\n",
     "# Run the tests\n",
     "test_effects_mask_clip_examples()"
@@ -2157,10 +2157,10 @@
     "#| export\n",
     "def test_effects_mask_composite_examples():\n",
     "    \"\"\"Test mask composite utilities.\"\"\"\n",
-    "    assert mask_composite.add == \"mask-add\"\n",
-    "    assert mask_composite.subtract == \"mask-subtract\"\n",
-    "    assert mask_composite.intersect == \"mask-intersect\"\n",
-    "    assert mask_composite.exclude == \"mask-exclude\"\n",
+    "    assert str(mask_composite.add) == \"mask-add\"\n",
+    "    assert str(mask_composite.subtract) == \"mask-subtract\"\n",
+    "    assert str(mask_composite.intersect) == \"mask-intersect\"\n",
+    "    assert str(mask_composite.exclude) == \"mask-exclude\"\n",
     "\n",
     "# Run the tests\n",
     "test_effects_mask_composite_examples()"
@@ -3351,40 +3351,40 @@
     "def test_effects_mask_properties_examples():\n",
     "    \"\"\"Test mask property utilities (mode, origin, position, etc.).\"\"\"\n",
     "    # Test mask mode\n",
-    "    assert mask_mode.alpha == \"mask-alpha\"\n",
-    "    assert mask_mode.luminance == \"mask-luminance\"\n",
-    "    assert mask_mode.match == \"mask-match\"\n",
+    "    assert str(mask_mode.alpha) == \"mask-alpha\"\n",
+    "    assert str(mask_mode.luminance) == \"mask-luminance\"\n",
+    "    assert str(mask_mode.match) == \"mask-match\"\n",
     "    \n",
     "    # Test mask origin\n",
-    "    assert mask_origin.border == \"mask-origin-border\"\n",
-    "    assert mask_origin.padding == \"mask-origin-padding\"\n",
-    "    assert mask_origin.content == \"mask-origin-content\"\n",
-    "    assert mask_origin.fill == \"mask-origin-fill\"\n",
-    "    assert mask_origin.stroke == \"mask-origin-stroke\"\n",
-    "    assert mask_origin.view == \"mask-origin-view\"\n",
+    "    assert str(mask_origin.border) == \"mask-origin-border\"\n",
+    "    assert str(mask_origin.padding) == \"mask-origin-padding\"\n",
+    "    assert str(mask_origin.content) == \"mask-origin-content\"\n",
+    "    assert str(mask_origin.fill) == \"mask-origin-fill\"\n",
+    "    assert str(mask_origin.stroke) == \"mask-origin-stroke\"\n",
+    "    assert str(mask_origin.view) == \"mask-origin-view\"\n",
     "    \n",
     "    # Test mask position\n",
-    "    assert mask_position.top_left == \"mask-top-left\"\n",
-    "    assert mask_position.top == \"mask-top\"\n",
-    "    assert mask_position.center == \"mask-center\"\n",
-    "    assert mask_position.bottom_right == \"mask-bottom-right\"\n",
+    "    assert str(mask_position.top_left) == \"mask-top-left\"\n",
+    "    assert str(mask_position.top) == \"mask-top\"\n",
+    "    assert str(mask_position.center) == \"mask-center\"\n",
+    "    assert str(mask_position.bottom_right) == \"mask-bottom-right\"\n",
     "    \n",
     "    # Test mask repeat\n",
-    "    assert mask_repeat.repeat == \"mask-repeat\"\n",
-    "    assert mask_repeat.no_repeat == \"mask-no-repeat\"\n",
-    "    assert mask_repeat.repeat_x == \"mask-repeat-x\"\n",
-    "    assert mask_repeat.repeat_y == \"mask-repeat-y\"\n",
-    "    assert mask_repeat.repeat_space == \"mask-repeat-space\"\n",
-    "    assert mask_repeat.repeat_round == \"mask-repeat-round\"\n",
+    "    assert str(mask_repeat.repeat) == \"mask-repeat\"\n",
+    "    assert str(mask_repeat.no_repeat) == \"mask-no-repeat\"\n",
+    "    assert str(mask_repeat.repeat_x) == \"mask-repeat-x\"\n",
+    "    assert str(mask_repeat.repeat_y) == \"mask-repeat-y\"\n",
+    "    assert str(mask_repeat.repeat_space) == \"mask-repeat-space\"\n",
+    "    assert str(mask_repeat.repeat_round) == \"mask-repeat-round\"\n",
     "    \n",
     "    # Test mask size\n",
-    "    assert mask_size.auto == \"mask-auto\"\n",
-    "    assert mask_size.cover == \"mask-cover\"\n",
-    "    assert mask_size.contain == \"mask-contain\"\n",
+    "    assert str(mask_size.auto) == \"mask-auto\"\n",
+    "    assert str(mask_size.cover) == \"mask-cover\"\n",
+    "    assert str(mask_size.contain) == \"mask-contain\"\n",
     "    \n",
     "    # Test mask type\n",
-    "    assert mask_type.alpha == \"mask-type-alpha\"\n",
-    "    assert mask_type.luminance == \"mask-type-luminance\"\n",
+    "    assert str(mask_type.alpha) == \"mask-type-alpha\"\n",
+    "    assert str(mask_type.luminance) == \"mask-type-luminance\"\n",
     "\n",
     "# Run the tests\n",
     "test_effects_mask_properties_examples()"
