--- a/nbs/utilities/filters.ipynb
+++ b/nbs/utilities/filters.ipynb
@@ -86,7 +86,7 @@
     "def test_filters_control_examples():\n",
     "    \"\"\"Test filter control utilities.\"\"\"\n",
     "    assert str(filter_none) == \"filter-none\"\n",
-    "    assert filter_none() == \"filter-none\"\n",
+    "    assert str(filter_none()) == \"filter-none\"\n",
     "    assert filter_none.build() == \"filter-none\"\n",
     "\n",
     "# Run the tests\n",
@@ -161,14 +161,14 @@
     "def test_filters_blur_examples():\n",
     "    \"\"\"Test blur filter utilities.\"\"\"\n",
     "    # Test named blur scales\n",
-    "    assert blur.none == \"blur-none\"\n",
-    "    assert blur.xs == \"blur-xs\"\n",
-    "    assert blur.sm == \"blur-sm\"\n",
-    "    assert blur.md == \"blur-md\"\n",
-    "    assert blur.lg == \"blur-lg\"\n",
-    "    assert blur.xl == \"blur-xl\"\n",
-    "    assert blur._2xl == \"blur-2xl\"\n",
-    "    assert blur._3xl == \"blur-3xl\"\n",
+    "    assert str(blur.none) == \"blur-none\"\n",
+    "    assert str(blur.xs) == \"blur-xs\"\n",
+    "    assert str(blur.sm) == \"blur-sm\"\n",
+    "    assert str(blur.md) == \"blur-md\"\n",
+    "    assert str(blur.lg) == \"blur-lg\"\n",
+    "    assert str(blur.xl) == \"blur-xl\"\n",
+    "    assert str(blur._2xl) == \"blur-2xl\"\n",
+    "    assert str(blur._3xl) == \"blur-3xl\"\n",
     "\n",
     "# Run the tests\n",
     "test_filters_blur_examples()"
@@ -359,13 +359,13 @@
     "def test_filters_drop_shadow_examples():\n",
     "    \"\"\"Test drop shadow filter utilities.\"\"\"\n",
     "    # Test named drop shadow scales\n",
-    "    assert drop_shadow.none == \"drop-shadow-none\"\n",
-    "    assert drop_shadow.xs == \"drop-shadow-xs\"\n",
-    "    assert drop_shadow.sm == \"drop-shadow-sm\"\n",
-    "    assert drop_shadow.md == \"drop-shadow-md\"\n",
-    "    assert drop_shadow.lg == \"drop-shadow-lg\"\n",
-    "    assert drop_shadow.xl == \"drop-shadow-xl\"\n",
-    "    assert drop_shadow._2xl == \"drop-shadow-2xl\"\n",
+    "    assert str(drop_shadow.none) == \"drop-shadow-none\"\n",
+    "    assert str(drop_shadow.xs) == \"drop-shadow-xs\"\n",
+    "    assert str(drop_shadow.sm) == \"drop-shadow-sm\"\n",
+    "    assert str(drop_shadow.md) == \"drop-shadow-md\"\n",
+    "    assert str(drop_shadow.lg) == \"drop-shadow-lg\"\n",
+    "    assert str(drop_shadow.xl) == \"drop-shadow-xl\"\n",
+    "    assert str(drop_shadow._2xl) == \"drop-shadow-2xl\"\n",
     "    \n",
     "    # Test drop shadow colors - all 22 Tailwind color families\n",
     "    assert str(drop_shadow_color.red._500) == \"drop-shadow-red-500\"\n",
@@ -819,10 +819,10 @@
     "    assert str(backdrop_filter_none) == \"backdrop-filter-none\"\n",
     "    \n",
     "    # Test backdrop blur\n",
-    "    assert backdrop_blur.none == \"backdrop-blur-none\"\n",
-    "    assert backdrop_blur.sm == \"backdrop-blur-sm\"\n",
-    "    assert backdrop_blur.lg == \"backdrop-blur-lg\"\n",
-    "    assert backdrop_blur._2xl == \"backdrop-blur-2xl\"\n",
+    "    assert str(backdrop_blur.none) == \"backdrop-blur-none\"\n",
+    "    assert str(backdrop_blur.sm) == \"backdrop-blur-sm\"\n",
+    "    assert str(backdrop_blur.lg) == \"backdrop-blur-lg\"\n",
+    "    assert str(backdrop_blur._2xl) == \"backdrop-blur-2xl\"\n",
     "    \n",
     "    # Test backdrop brightness\n",
     "    assert str(backdrop_brightness(50)) == \"backdrop-brightness-50\"\n",
