--- a/nbs/utilities/flexbox_and_grid.ipynb
+++ b/nbs/utilities/flexbox_and_grid.ipynb
@@ -162,10 +162,10 @@
     "): # TODO: Add type hint\n",
     "    \"\"\"Test flex direction utilities.\"\"\"\n",
     "    # Test flex direction utilities\n",
-    "    assert flex_direction.row == \"flex-row\"\n",
-    "    assert flex_direction.row_reverse == \"flex-row-reverse\"\n",
-    "    assert flex_direction.col == \"flex-col\"\n",
-    "    assert flex_direction.col_reverse == \"flex-col-reverse\"\n",
+    "    assert str(flex_direction.row) == \"flex-row\"\n",
+    "    assert str(flex_direction.row_reverse) == \"flex-row-reverse\"\n",
+    "    assert str(flex_direction.col) == \"flex-col\"\n",
+    "    assert str(flex_direction.col_reverse) == \"flex-col-reverse\"\n",
     "\n",
     "# Run the tests\n",
     "test_flexbox_and_grid_direction_examples()"
@@ -211,9 +211,9 @@
     "): # TODO: Add type hint\n",
     "    \"\"\"Test flex wrap utilities.\"\"\"\n",
     "    # Test flex wrap utilities\n",
-    "    assert flex_wrap.nowrap == \"flex-nowrap\"\n",
-    "    assert flex_wrap.wrap == \"flex-wrap\"\n",
-    "    assert flex_wrap.wrap_reverse == \"flex-wrap-reverse\"\n",
+    "    assert str(flex_wrap.nowrap) == \"flex-nowrap\"\n",
+    "    assert str(flex_wrap.wrap) == \"flex-wrap\"\n",
+    "    assert str(flex_wrap.wrap_reverse) == \"flex-wrap-reverse\"\n",
     "\n",
     "# Run the tests\n",
     "test_flexbox_and_grid_wrap_examples()"
@@ -907,11 +907,11 @@
     "): # TODO: Add type hint\n",
     "    \"\"\"Test grid auto flow utilities.\"\"\"\n",
     "    # Test grid auto flow utilities\n",
-    "    assert grid_flow.row == \"grid-flow-row\"\n",
-    "    assert grid_flow.col == \"grid-flow-col\"\n",
-    "    assert grid_flow.dense == \"grid-flow-dense\"\n",
-    "    assert grid_flow.row_dense == \"grid-flow-row-dense\"\n",
-    "    assert grid_flow.col_dense == \"grid-flow-col-dense\"\n",
+    "    assert str(grid_flow.row) == \"grid-flow-row\"\n",
+    "    assert str(grid_flow.col) == \"grid-flow-col\"\n",
+    "    assert str(grid_flow.dense) == \"grid-flow-dense\"\n",
+    "    assert str(grid_flow.row_dense) == \"grid-flow-row-dense\"\n",
+    "    assert str(grid_flow.col_dense) == \"grid-flow-col-dense\"\n",
     "\n",
     "# Run the tests\n",
     "test_flexbox_and_grid_flow_examples()"
@@ -1027,17 +1027,17 @@
     "): # TODO: Add type hint\n",
     "    \"\"\"Test grid auto columns and rows utilities.\"\"\"\n",
     "    # Test grid auto columns/rows\n",
-    "    assert auto_cols.auto == \"auto-cols-auto\"\n",
-    "    assert auto_cols.min == \"auto-cols-min\"\n",
-    "    assert auto_cols.max == \"auto-cols-max\"\n",
-    "    assert auto_cols.fr == \"auto-cols-fr\"\n",
+    "    assert str(auto_cols.auto) == \"auto-cols-auto\"\n",
+    "    assert str(auto_cols.min) == \"auto-cols-min\"\n",
+    "    assert str(auto_cols.max) == \"auto-cols-max\"\n",
+    "    assert str(auto_cols.fr) == \"auto-cols-fr\"\n",
     "    assert str(auto_cols(\"200px\")) == \"auto-cols-[200px]\"\n",
     "    assert str(auto_cols(\"--size\")) == \"auto-cols-(--size)\"\n",
     "    \n",
-    "    assert auto_rows.auto == \"auto-rows-auto\"\n",
-    "    assert auto_rows.min == \"auto-rows-min\"\n",
-    "    assert auto_rows.max == \"auto-rows-max\"\n",
-    "    assert auto_rows.fr == \"auto-rows-fr\"\n",
+    "    assert str(auto_rows.auto) == \"auto-rows-auto\"\n",
+    "    assert str(auto_rows.min) == \"auto-rows-min\"\n",
+    "    assert str(auto_rows.max) == \"auto-rows-max\"\n",
+    "    assert str(auto_rows.fr) == \"auto-rows-fr\"\n",
     "    assert str(auto_rows(\"minmax(0, 1fr)\")) == \"auto-rows-[minmax(0, 1fr)]\"\n",
     "\n",
     "# Run the tests\n",
@@ -1253,16 +1253,16 @@
     "): # TODO: Add type hint\n",
     "    \"\"\"Test justify utilities for flex and grid containers.\"\"\"\n",
     "    # Test justify utilities\n",
-    "    assert justify.start == \"justify-start\"\n",
-    "    assert justify.center == \"justify-center\"\n",
-    "    assert justify.between == \"justify-between\"\n",
-    "    assert justify.evenly == \"justify-evenly\"\n",
+    "    assert str(justify.start) == \"justify-start\"\n",
+    "    assert str(justify.center) == \"justify-center\"\n",
+    "    assert str(justify.between) == \"justify-between\"\n",
+    "    assert str(justify.evenly) == \"justify-evenly\"\n",
     "    \n",
-    "    assert justify_items.center == \"justify-items-center\"\n",
-    "    assert justify_items.stretch == \"justify-items-stretch\"\n",
+    "    assert str(justify_items.center) == \"justify-items-center\"\n",
+    "    assert str(justify_items.stretch) == \"justify-items-stretch\"\n",
     "    \n",
-    "    assert justify_self.auto == \"justify-self-auto\"\n",
-    "    assert justify_self.end == \"justify-self-end\"\n",
+    "    assert str(justify_self.auto) == \"justify-self-auto\"\n",
+    "    assert str(justify_self.end) == \"justify-self-end\"\n",
     "\n",
     "# Run the tests\n",
     "test_flexbox_and_grid_justify_examples()"
@@ -1381,17 +1381,17 @@
     "): # TODO: Add type hint\n",
     "    \"\"\"Test align utilities for flex and grid containers.\"\"\"\n",
     "    # Test align utilities\n",
-    "    assert content.center == \"content-center\"\n",
-    "    assert content.between == \"content-between\"\n",
-    "    assert content.stretch == \"content-stretch\"\n",
+    "    assert str(content.center) == \"content-center\"\n",
+    "    assert str(content.between) == \"content-between\"\n",
+    "    assert str(content.stretch) == \"content-stretch\"\n",
     "    \n",
-    "    assert items.center == \"items-center\"\n",
-    "    assert items.start == \"items-start\"\n",
-    "    assert items.baseline == \"items-baseline\"\n",
+    "    assert str(items.center) == \"items-center\"\n",
+    "    assert str(items.start) == \"items-start\"\n",
+    "    assert str(items.baseline) == \"items-baseline\"\n",
     "    \n",
-    "    assert self_align.auto == \"self-auto\"\n",
-    "    assert self_align.center == \"self-center\"\n",
-    "    assert self_align.stretch == \"self-stretch\"\n",
+    "    assert str(self_align.auto) == \"self-auto\"\n",
+    "    assert str(self_align.center) == \"self-center\"\n",
+    "    assert str(self_align.stretch) == \"self-stretch\"\n",
     "\n",
     "# Run the tests\n",
     "test_flexbox_and_grid_align_examples()"
@@ -1508,14 +1508,14 @@
     "): # TODO: Add type hint\n",
     "    \"\"\"Test place utilities for grid containers.\"\"\"\n",
     "    # Test place utilities\n",
-    "    assert place_content.center == \"place-content-center\"\n",
-    "    assert place_content.between == \"place-content-between\"\n",
+    "    assert str(place_content.center) == \"place-content-center\"\n",
+    "    assert str(place_content.between) == \"place-content-between\"\n",
     "    \n",
-    "    assert place_items.center == \"place-items-center\"\n",
-    "    assert place_items.stretch == \"place-items-stretch\"\n",
+    "    assert str(place_items.center) == \"place-items-center\"\n",
+    "    assert str(place_items.stretch) == \"place-items-stretch\"\n",
     "    \n",
-    "    assert place_self.auto == \"place-self-auto\"\n",
-    "    assert place_self.center == \"place-self-center\"\n",
+    "    assert str(place_self.auto) == \"place-self-auto\"\n",
+    "    assert str(place_self.center) == \"place-self-center\"\n",
     "\n",
     "# Run the tests\n",
     "test_flexbox_and_grid_place_examples()"
