--- a/nbs/utilities/tables.ipynb
+++ b/nbs/utilities/tables.ipynb
@@ -86,8 +86,8 @@
     "#| export\n",
     "def test_tables_border_collapse_examples():\n",
     "    \"\"\"Test border collapse utilities.\"\"\"\n",
-    "    assert border_collapse.collapse == \"border-collapse\"\n",
-    "    assert border_collapse.separate == \"border-separate\"\n",
+    "    assert str(border_collapse.collapse) == \"border-collapse\"\n",
+    "    assert str(border_collapse.separate) == \"border-separate\"\n",
     "\n",
     "# Run the tests\n",
     "test_tables_border_collapse_examples()"
@@ -299,8 +299,8 @@
     "#| export\n",
     "def test_tables_layout_examples():\n",
     "    \"\"\"Test table layout utilities.\"\"\"\n",
-    "    assert table_layout.auto == \"table-auto\"\n",
-    "    assert table_layout.fixed == \"table-fixed\"\n",
+    "    assert str(table_layout.auto) == \"table-auto\"\n",
+    "    assert str(table_layout.fixed) == \"table-fixed\"\n",
     "\n",
     "# Run the tests\n",
     "test_tables_layout_examples()"
@@ -343,8 +343,8 @@
     "#| export\n",
     "def test_tables_caption_side_examples():\n",
     "    \"\"\"Test caption side utilities.\"\"\"\n",
-    "    assert caption_side.top == \"caption-top\"\n",
-    "    assert caption_side.bottom == \"caption-bottom\"\n",
+    "    assert str(caption_side.top) == \"caption-top\"\n",
+    "    assert str(caption_side.bottom) == \"caption-bottom\"\n",
     "\n",
     "# Run the tests\n",
     "test_tables_caption_side_examples()"
@@ -371,8 +371,8 @@
     "def test_tables_all_utilities():\n",
     "    \"\"\"Comprehensive test of all table utilities.\"\"\"\n",
     "    # Border collapse\n",
-    "    assert border_collapse.collapse == \"border-collapse\"\n",
-    "    assert border_collapse.separate == \"border-separate\"\n",
+    "    assert str(border_collapse.collapse) == \"border-collapse\"\n",
+    "    assert str(border_collapse.separate) == \"border-separate\"\n",
     "    \n",
     "    # Border spacing - basic\n",
     "    assert str(border_spacing(2)) == \"border-spacing-2\"\n",
@@ -387,12 +387,12 @@
     "    assert str(border_spacing.x(\"0.5rem\")) == \"border-spacing-x-[0.5rem]\"\n",
     "    \n",
     "    # Table layout\n",
-    "    assert table_layout.auto == \"table-auto\"\n",
-    "    assert table_layout.fixed == \"table-fixed\"\n",
+    "    assert str(table_layout.auto) == \"table-auto\"\n",
+    "    assert str(table_layout.fixed) == \"table-fixed\"\n",
     "    \n",
     "    # Caption side\n",
-    "    assert caption_side.top == \"caption-top\"\n",
-    "    assert caption_side.bottom == \"caption-bottom\"\n",
+    "    assert str(caption_side.top) == \"caption-top\"\n",
+    "    assert str(caption_side.bottom) == \"caption-bottom\"\n",
     "\n",
     "# Run the comprehensive test\n",
     "test_tables_all_utilities()"
@@ -481,7 +481,7 @@
     "    \n",
     "    # Fixed layout table with caption\n",
     "    fixed_table = Table(\n",
-    "        Caption(\"User Information\", cls=caption_side.top),\n",
+    "        Caption(\"User Information\", cls=str(caption_side.top)),\n",
     "        Thead(\n",
     "            Tr(\n",
     "                Th(\"ID\", cls=\"w-20\"),\n",
@@ -507,7 +507,7 @@
     "    \n",
     "    # Auto layout table (default behavior)\n",
     "    auto_table = Table(\n",
-    "        Caption(\"Sales Data\", cls=caption_side.bottom),\n",
+    "        Caption(\"Sales Data\", cls=str(caption_side.bottom)),\n",
     "        Thead(\n",
     "            Tr(Th(\"Month\"), Th(\"Revenue\"), Th(\"Growth\"))\n",
     "        ),\n",
@@ -529,6 +529,14 @@
     "# Run the tests\n",
     "test_tables_practical_examples()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f5068e5-340e-4145-8d19-b8775aa30153",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -720,198 +728,6 @@
     "#| hide\n",
     "import nbdev; nbdev.nbdev_export()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "17a57c43-8455-416f-9131-e8d07522d9b7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "369f3290-7be8-42e3-a823-6cdfe2fd6ac8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a60cbf1d-798c-408a-9543-f7d44821bf16",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "78837250-6058-4c1b-963b-ec469d83dcaa",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "89465359-5b48-4103-8988-54846ae16eb1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a27f57a9-c6ff-4844-809e-a8ab11ab2acf",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "04a91fa7-5a2b-4948-b159-b28334374014",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d13835f0-e382-4bfe-8355-947f8cabe626",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "43dd07b0-8385-4e37-b814-ac0d802d1711",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bba0483d-d822-4f90-b99d-f106a6c432dc",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "64969d9d-e72e-4054-a307-909e4d4ab17a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "20f6fa6b-994f-4929-a0af-ba7f2b62421a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dd74d377-f378-4102-a401-f36a2a430fd3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3b81b484-462b-40e7-b2d5-98ab483578b3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1222cf12-5d37-45c9-8877-fd7f022d5b8f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e92347c5-ddff-4562-b694-c4b7b22352a4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dafd8a1e-3137-48c4-a789-35814fc6bfd3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "05150000-bf54-4890-88c0-ab64eccfb6eb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "499c17fa-9879-49a4-b73b-19d6d9a89745",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "86c64c78-b899-490a-9eb7-8ddf0c0bde77",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "aef5f5f3-1268-45b6-8b1f-3596cd3b196b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "60fcb193-2c01-4afc-a0a4-d6865a8dbf93",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "264aabdb-c304-4f58-a657-862455aaf826",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "eca522d4-5b21-4cb4-a916-1c24038c0e28",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
