--- a/nbs/utilities/transforms.ipynb
+++ b/nbs/utilities/transforms.ipynb
@@ -90,8 +90,8 @@
     "#| export\n",
     "def test_transforms_backface_examples():\n",
     "    \"\"\"Test backface visibility utilities.\"\"\"\n",
-    "    assert backface.hidden == \"backface-hidden\"\n",
-    "    assert backface.visible == \"backface-visible\"\n",
+    "    assert str(backface.hidden) == \"backface-hidden\"\n",
+    "    assert str(backface.visible) == \"backface-visible\"\n",
     "\n",
     "# Run the test\n",
     "test_transforms_backface_examples()"
@@ -178,12 +178,12 @@
     "def test_transforms_perspective_examples():\n",
     "    \"\"\"Test perspective utilities.\"\"\"\n",
     "    # Named perspectives\n",
-    "    assert perspective.dramatic == \"perspective-dramatic\"\n",
-    "    assert perspective.near == \"perspective-near\"\n",
-    "    assert perspective.normal == \"perspective-normal\"\n",
-    "    assert perspective.midrange == \"perspective-midrange\"\n",
-    "    assert perspective.distant == \"perspective-distant\"\n",
-    "    assert perspective.none == \"perspective-none\"\n",
+    "    assert str(perspective.dramatic) == \"perspective-dramatic\"\n",
+    "    assert str(perspective.near) == \"perspective-near\"\n",
+    "    assert str(perspective.normal) == \"perspective-normal\"\n",
+    "    assert str(perspective.midrange) == \"perspective-midrange\"\n",
+    "    assert str(perspective.distant) == \"perspective-distant\"\n",
+    "    assert str(perspective.none) == \"perspective-none\"\n",
     "    \n",
     "    # Custom perspectives\n",
     "    assert perspective(\"500px\") == \"perspective-[500px]\"\n",
@@ -274,10 +274,10 @@
     "def test_transforms_perspective_origin_examples():\n",
     "    \"\"\"Test perspective origin utilities.\"\"\"\n",
     "    # Fixed positions\n",
-    "    assert perspective_origin.center == \"perspective-origin-center\"\n",
-    "    assert perspective_origin.top == \"perspective-origin-top\"\n",
-    "    assert perspective_origin.bottom_right == \"perspective-origin-bottom-right\"\n",
-    "    assert perspective_origin.top_left == \"perspective-origin-top-left\"\n",
+    "    assert str(perspective_origin.center) == \"perspective-origin-center\"\n",
+    "    assert str(perspective_origin.top) == \"perspective-origin-top\"\n",
+    "    assert str(perspective_origin.bottom_right) == \"perspective-origin-bottom-right\"\n",
+    "    assert str(perspective_origin.top_left) == \"perspective-origin-top-left\"\n",
     "    \n",
     "    # Custom positions\n",
     "    assert perspective_origin(\"50% 25%\") == \"perspective-origin-[50% 25%]\"\n",
@@ -932,9 +932,9 @@
     "def test_transforms_transform_examples():\n",
     "    \"\"\"Test transform utilities.\"\"\"\n",
     "    # Special values\n",
-    "    assert transform.none == \"transform-none\"\n",
-    "    assert transform.gpu == \"transform-gpu\"\n",
-    "    assert transform.cpu == \"transform-cpu\"\n",
+    "    assert str(transform.none) == \"transform-none\"\n",
+    "    assert str(transform.gpu) == \"transform-gpu\"\n",
+    "    assert str(transform.cpu) == \"transform-cpu\"\n",
     "    \n",
     "    # Custom transforms\n",
     "    assert transform(\"npu\") == \"transform-npu\"\n",
@@ -1024,10 +1024,10 @@
     "def test_transforms_origin_examples():\n",
     "    \"\"\"Test transform origin utilities.\"\"\"\n",
     "    # Fixed positions\n",
-    "    assert origin.center == \"origin-center\"\n",
-    "    assert origin.top == \"origin-top\"\n",
-    "    assert origin.bottom_right == \"origin-bottom-right\"\n",
-    "    assert origin.top_left == \"origin-top-left\"\n",
+    "    assert str(origin.center) == \"origin-center\"\n",
+    "    assert str(origin.top) == \"origin-top\"\n",
+    "    assert str(origin.bottom_right) == \"origin-bottom-right\"\n",
+    "    assert str(origin.top_left) == \"origin-top-left\"\n",
     "    \n",
     "    # Custom positions\n",
     "    assert origin(\"50% 25%\") == \"origin-[50% 25%]\"\n",
@@ -1075,8 +1075,8 @@
     "#| export\n",
     "def test_transforms_style_examples():\n",
     "    \"\"\"Test transform style utilities.\"\"\"\n",
-    "    assert transform_style._3d == \"transform-3d\"\n",
-    "    assert transform_style.flat == \"transform-flat\"\n",
+    "    assert str(transform_style._3d) == \"transform-3d\"\n",
+    "    assert str(transform_style.flat) == \"transform-flat\"\n",
     "\n",
     "# Run the test\n",
     "test_transforms_style_examples()"
