--- a/nbs/utilities/transitions_and_animation.ipynb
+++ b/nbs/utilities/transitions_and_animation.ipynb
@@ -188,13 +188,13 @@
     "def test_transitions_and_animation_property_examples():\n",
     "    \"\"\"Test transition property utilities.\"\"\"\n",
     "    # Test predefined transition properties\n",
-    "    assert transition.default == \"transition\"\n",
-    "    assert transition.all == \"transition-all\"\n",
-    "    assert transition.colors == \"transition-colors\"\n",
-    "    assert transition.opacity == \"transition-opacity\"\n",
-    "    assert transition.shadow == \"transition-shadow\"\n",
-    "    assert transition.transform == \"transition-transform\"\n",
-    "    assert transition.none == \"transition-none\"\n",
+    "    assert str(transition.default) == \"transition\"\n",
+    "    assert str(transition.all) == \"transition-all\"\n",
+    "    assert str(transition.colors) == \"transition-colors\"\n",
+    "    assert str(transition.opacity) == \"transition-opacity\"\n",
+    "    assert str(transition.shadow) == \"transition-shadow\"\n",
+    "    assert str(transition.transform) == \"transition-transform\"\n",
+    "    assert str(transition.none) == \"transition-none\"\n",
     "    \n",
     "    # Test custom properties\n",
     "    assert transition(\"--my-transition\") == \"transition-(--my-transition)\"\n",
@@ -254,8 +254,8 @@
     "#| export\n",
     "def test_transitions_and_animation_behavior_examples():\n",
     "    \"\"\"Test transition behavior utilities.\"\"\"\n",
-    "    assert transition_behavior.normal == \"transition-normal\"\n",
-    "    assert transition_behavior.discrete == \"transition-discrete\"\n",
+    "    assert str(transition_behavior.normal) == \"transition-normal\"\n",
+    "    assert str(transition_behavior.discrete) == \"transition-discrete\"\n",
     "\n",
     "# Run the tests\n",
     "test_transitions_and_animation_behavior_examples()"
@@ -502,11 +502,11 @@
     "def test_transitions_and_animation_timing_examples():\n",
     "    \"\"\"Test transition timing function utilities.\"\"\"\n",
     "    # Test predefined easing functions\n",
-    "    assert ease.linear == \"ease-linear\"\n",
-    "    assert ease._in == \"ease-in\"  # Note: 'in' is a Python keyword, so we use 'in_'\n",
-    "    assert ease.out == \"ease-out\"\n",
-    "    assert ease.in_out == \"ease-in-out\"\n",
-    "    assert ease.initial == \"ease-initial\"\n",
+    "    assert str(ease.linear) == \"ease-linear\"\n",
+    "    assert str(ease._in) == \"ease-in\"  # Note: 'in' is a Python keyword, so we use 'in_'\n",
+    "    assert str(ease.out) == \"ease-out\"\n",
+    "    assert str(ease.in_out) == \"ease-in-out\"\n",
+    "    assert str(ease.initial) == \"ease-initial\"\n",
     "    \n",
     "    # Test custom properties\n",
     "    assert ease(\"--my-ease\") == \"ease-(--my-ease)\"\n",
@@ -723,11 +723,11 @@
     "def test_transitions_and_animation_examples():\n",
     "    \"\"\"Test animation utilities.\"\"\"\n",
     "    # Test predefined animations\n",
-    "    assert animate.spin == \"animate-spin\"\n",
-    "    assert animate.ping == \"animate-ping\"\n",
-    "    assert animate.pulse == \"animate-pulse\"\n",
-    "    assert animate.bounce == \"animate-bounce\"\n",
-    "    assert animate.none == \"animate-none\"\n",
+    "    assert str(animate.spin) == \"animate-spin\"\n",
+    "    assert str(animate.ping) == \"animate-ping\"\n",
+    "    assert str(animate.pulse) == \"animate-pulse\"\n",
+    "    assert str(animate.bounce) == \"animate-bounce\"\n",
+    "    assert str(animate.none) == \"animate-none\"\n",
     "    \n",
     "    # Test custom properties\n",
     "    assert animate(\"--my-animation\") == \"animate-(--my-animation)\"\n",
