--- a/nbs/utilities/typography.ipynb
+++ b/nbs/utilities/typography.ipynb
@@ -88,9 +88,9 @@
     "#| export\n",
     "def test_typography_font_family_examples():\n",
     "    \"\"\"Test font family utilities.\"\"\"\n",
-    "    assert font.sans == \"font-sans\"\n",
-    "    assert font.serif == \"font-serif\"\n",
-    "    assert font.mono == \"font-mono\"\n",
+    "    assert str(font.sans) == \"font-sans\"\n",
+    "    assert str(font.serif) == \"font-serif\"\n",
+    "    assert str(font.mono) == \"font-mono\"\n",
     "\n",
     "# Run the tests\n",
     "test_typography_font_family_examples()"
@@ -420,15 +420,15 @@
     "#| export\n",
     "def test_typography_font_stretch_examples():\n",
     "    \"\"\"Test font stretch utilities.\"\"\"\n",
-    "    assert font_stretch.ultra_condensed == \"font-stretch-ultra-condensed\"\n",
-    "    assert font_stretch.extra_condensed == \"font-stretch-extra-condensed\"\n",
-    "    assert font_stretch.condensed == \"font-stretch-condensed\"\n",
-    "    assert font_stretch.semi_condensed == \"font-stretch-semi-condensed\"\n",
-    "    assert font_stretch.normal == \"font-stretch-normal\"\n",
-    "    assert font_stretch.semi_expanded == \"font-stretch-semi-expanded\"\n",
-    "    assert font_stretch.expanded == \"font-stretch-expanded\"\n",
-    "    assert font_stretch.extra_expanded == \"font-stretch-extra-expanded\"\n",
-    "    assert font_stretch.ultra_expanded == \"font-stretch-ultra-expanded\"\n",
+    "    assert str(font_stretch.ultra_condensed) == \"font-stretch-ultra-condensed\"\n",
+    "    assert str(font_stretch.extra_condensed) == \"font-stretch-extra-condensed\"\n",
+    "    assert str(font_stretch.condensed) == \"font-stretch-condensed\"\n",
+    "    assert str(font_stretch.semi_condensed) == \"font-stretch-semi-condensed\"\n",
+    "    assert str(font_stretch.normal) == \"font-stretch-normal\"\n",
+    "    assert str(font_stretch.semi_expanded) == \"font-stretch-semi-expanded\"\n",
+    "    assert str(font_stretch.expanded) == \"font-stretch-expanded\"\n",
+    "    assert str(font_stretch.extra_expanded) == \"font-stretch-extra-expanded\"\n",
+    "    assert str(font_stretch.ultra_expanded) == \"font-stretch-ultra-expanded\"\n",
     "\n",
     "# Run the tests\n",
     "test_typography_font_stretch_examples()"
@@ -885,11 +885,11 @@
     "    \"\"\"Test list styles utilities.\"\"\"\n",
     "    \n",
     "    # List styles\n",
-    "    assert list_position.inside == \"list-inside\"\n",
-    "    assert list_position.outside == \"list-outside\"\n",
-    "    assert list_style.disc == \"list-disc\"\n",
-    "    assert list_style.decimal == \"list-decimal\"\n",
-    "    assert list_style.none == \"list-none\"\n",
+    "    assert str(list_position.inside) == \"list-inside\"\n",
+    "    assert str(list_position.outside) == \"list-outside\"\n",
+    "    assert str(list_style.disc) == \"list-disc\"\n",
+    "    assert str(list_style.decimal) == \"list-decimal\"\n",
+    "    assert str(list_style.none) == \"list-none\"\n",
     "\n",
     "# Run the tests\n",
     "test_typography_list_styles_examples()"
@@ -937,12 +937,12 @@
     "def test_typography_text_alignment_examples():\n",
     "    \"\"\"Test text alignment utilities.\"\"\"\n",
     "    # Text alignment\n",
-    "    assert text_align.left == \"text-left\"\n",
-    "    assert text_align.center == \"text-center\"\n",
-    "    assert text_align.right == \"text-right\"\n",
-    "    assert text_align.justify == \"text-justify\"\n",
-    "    assert text_align.start == \"text-start\"\n",
-    "    assert text_align.end == \"text-end\"\n",
+    "    assert str(text_align.left) == \"text-left\"\n",
+    "    assert str(text_align.center) == \"text-center\"\n",
+    "    assert str(text_align.right) == \"text-right\"\n",
+    "    assert str(text_align.justify) == \"text-justify\"\n",
+    "    assert str(text_align.start) == \"text-start\"\n",
+    "    assert str(text_align.end) == \"text-end\"\n",
     "\n",
     "# Run the tests\n",
     "test_typography_text_alignment_examples()"
@@ -1241,11 +1241,11 @@
     "    assert str(decoration.stone._500) == \"decoration-stone-500\"\n",
     "    \n",
     "    # Decoration styles\n",
-    "    assert decoration_style.solid == \"decoration-solid\"\n",
-    "    assert decoration_style.double == \"decoration-double\"\n",
-    "    assert decoration_style.dotted == \"decoration-dotted\"\n",
-    "    assert decoration_style.dashed == \"decoration-dashed\"\n",
-    "    assert decoration_style.wavy == \"decoration-wavy\"\n",
+    "    assert str(decoration_style.solid) == \"decoration-solid\"\n",
+    "    assert str(decoration_style.double) == \"decoration-double\"\n",
+    "    assert str(decoration_style.dotted) == \"decoration-dotted\"\n",
+    "    assert str(decoration_style.dashed) == \"decoration-dashed\"\n",
+    "    assert str(decoration_style.wavy) == \"decoration-wavy\"\n",
     "    \n",
     "    # Decoration thickness\n",
     "    assert str(decoration_thickness(0)) == \"decoration-0\"\n",
@@ -1541,14 +1541,14 @@
     "    \"\"\"Test vertical align utilities.\"\"\"\n",
     "    \n",
     "    # Vertical align\n",
-    "    assert align.baseline == \"align-baseline\"\n",
-    "    assert align.top == \"align-top\"\n",
-    "    assert align.middle == \"align-middle\"\n",
-    "    assert align.bottom == \"align-bottom\"\n",
-    "    assert align.text_top == \"align-text-top\"\n",
-    "    assert align.text_bottom == \"align-text-bottom\"\n",
-    "    assert align.sub == \"align-sub\"\n",
-    "    assert align.super == \"align-super\"\n",
+    "    assert str(align.baseline) == \"align-baseline\"\n",
+    "    assert str(align.top) == \"align-top\"\n",
+    "    assert str(align.middle) == \"align-middle\"\n",
+    "    assert str(align.bottom) == \"align-bottom\"\n",
+    "    assert str(align.text_top) == \"align-text-top\"\n",
+    "    assert str(align.text_bottom) == \"align-text-bottom\"\n",
+    "    assert str(align.sub) == \"align-sub\"\n",
+    "    assert str(align.super) == \"align-super\"\n",
     "\n",
     "# Run the tests\n",
     "test_typography_vertical_align_examples()"
@@ -1597,12 +1597,12 @@
     "    \"\"\"Test whitespace utilities.\"\"\"\n",
     "    \n",
     "    # White space\n",
-    "    assert whitespace.normal == \"whitespace-normal\"\n",
-    "    assert whitespace.nowrap == \"whitespace-nowrap\"\n",
-    "    assert whitespace.pre == \"whitespace-pre\"\n",
-    "    assert whitespace.pre_line == \"whitespace-pre-line\"\n",
-    "    assert whitespace.pre_wrap == \"whitespace-pre-wrap\"\n",
-    "    assert whitespace.break_spaces == \"whitespace-break-spaces\"\n",
+    "    assert str(whitespace.normal) == \"whitespace-normal\"\n",
+    "    assert str(whitespace.nowrap) == \"whitespace-nowrap\"\n",
+    "    assert str(whitespace.pre) == \"whitespace-pre\"\n",
+    "    assert str(whitespace.pre_line) == \"whitespace-pre-line\"\n",
+    "    assert str(whitespace.pre_wrap) == \"whitespace-pre-wrap\"\n",
+    "    assert str(whitespace.break_spaces) == \"whitespace-break-spaces\"\n",
     "\n",
     "# Run the tests\n",
     "test_typography_whitespace_examples()"
@@ -1734,9 +1734,9 @@
     "    \"\"\"Test hyphens utilities.\"\"\"\n",
     "    \n",
     "    # Hyphens\n",
-    "    assert hyphens.none == \"hyphens-none\"\n",
-    "    assert hyphens.manual == \"hyphens-manual\"\n",
-    "    assert hyphens.auto == \"hyphens-auto\"\n",
+    "    assert str(hyphens.none) == \"hyphens-none\"\n",
+    "    assert str(hyphens.manual) == \"hyphens-manual\"\n",
+    "    assert str(hyphens.auto) == \"hyphens-auto\"\n",
     "\n",
     "# Run the tests\n",
     "test_typography_hyphens_examples()"
