--- a/nbs/utilities/interactivity.ipynb
+++ b/nbs/utilities/interactivity.ipynb
@@ -158,8 +158,8 @@
     "#| export\n",
     "def test_interactivity_appearance_examples():\n",
     "    \"\"\"Test appearance utilities.\"\"\"\n",
-    "    assert appearance.none == \"appearance-none\"\n",
-    "    assert appearance.auto == \"appearance-auto\"\n",
+    "    assert str(appearance.none) == \"appearance-none\"\n",
+    "    assert str(appearance.auto) == \"appearance-auto\"\n",
     "\n",
     "# Run the tests\n",
     "test_interactivity_appearance_examples()"
@@ -277,12 +277,12 @@
     "#| export\n",
     "def test_interactivity_scheme_examples():\n",
     "    \"\"\"Test color scheme utilities.\"\"\"\n",
-    "    assert scheme.normal == \"scheme-normal\"\n",
-    "    assert scheme.dark == \"scheme-dark\"\n",
-    "    assert scheme.light == \"scheme-light\"\n",
-    "    assert scheme.light_dark == \"scheme-light-dark\"\n",
-    "    assert scheme.only_dark == \"scheme-only-dark\"\n",
-    "    assert scheme.only_light == \"scheme-only-light\"\n",
+    "    assert str(scheme.normal) == \"scheme-normal\"\n",
+    "    assert str(scheme.dark) == \"scheme-dark\"\n",
+    "    assert str(scheme.light) == \"scheme-light\"\n",
+    "    assert str(scheme.light_dark) == \"scheme-light-dark\"\n",
+    "    assert str(scheme.only_dark) == \"scheme-only-dark\"\n",
+    "    assert str(scheme.only_light) == \"scheme-only-light\"\n",
     "\n",
     "# Run the tests\n",
     "test_interactivity_scheme_examples()"
@@ -461,8 +461,8 @@
     "#| export\n",
     "def test_interactivity_field_sizing_examples():\n",
     "    \"\"\"Test field sizing utilities.\"\"\"\n",
-    "    assert field_sizing.fixed == \"field-sizing-fixed\"\n",
-    "    assert field_sizing.content == \"field-sizing-content\"\n",
+    "    assert str(field_sizing.fixed) == \"field-sizing-fixed\"\n",
+    "    assert str(field_sizing.content) == \"field-sizing-content\"\n",
     "\n",
     "# Run the tests\n",
     "test_interactivity_field_sizing_examples()"
@@ -505,8 +505,8 @@
     "#| export\n",
     "def test_interactivity_pointer_events_examples():\n",
     "    \"\"\"Test pointer events utilities.\"\"\"\n",
-    "    assert pointer_events.auto == \"pointer-events-auto\"\n",
-    "    assert pointer_events.none == \"pointer-events-none\"\n",
+    "    assert str(pointer_events.auto) == \"pointer-events-auto\"\n",
+    "    assert str(pointer_events.none) == \"pointer-events-none\"\n",
     "\n",
     "# Run the tests\n",
     "test_interactivity_pointer_events_examples()"
@@ -551,10 +551,10 @@
     "#| export\n",
     "def test_interactivity_resize_examples():\n",
     "    \"\"\"Test resize utilities.\"\"\"\n",
-    "    assert resize.none == \"resize-none\"\n",
-    "    assert resize.both == \"resize\"\n",
-    "    assert resize.y == \"resize-y\"\n",
-    "    assert resize.x == \"resize-x\"\n",
+    "    assert str(resize.none) == \"resize-none\"\n",
+    "    assert str(resize.both) == \"resize\"\n",
+    "    assert str(resize.y) == \"resize-y\"\n",
+    "    assert str(resize.x) == \"resize-x\"\n",
     "\n",
     "# Run the tests\n",
     "test_interactivity_resize_examples()"
@@ -597,8 +597,8 @@
     "#| export\n",
     "def test_interactivity_scroll_behavior_examples():\n",
     "    \"\"\"Test scroll behavior utilities.\"\"\"\n",
-    "    assert scroll.auto == \"scroll-auto\"\n",
-    "    assert scroll.smooth == \"scroll-smooth\"\n",
+    "    assert str(scroll.auto) == \"scroll-auto\"\n",
+    "    assert str(scroll.smooth) == \"scroll-smooth\"\n",
     "\n",
     "# Run the tests\n",
     "test_interactivity_scroll_behavior_examples()"
@@ -842,22 +842,22 @@
     "def test_interactivity_scroll_snap_examples():\n",
     "    \"\"\"Test scroll snap utilities.\"\"\"\n",
     "    # Snap align\n",
-    "    assert snap_align.start == \"snap-start\"\n",
-    "    assert snap_align.end == \"snap-end\"\n",
-    "    assert snap_align.center == \"snap-center\"\n",
-    "    assert snap_align.none == \"snap-align-none\"\n",
+    "    assert str(snap_align.start) == \"snap-start\"\n",
+    "    assert str(snap_align.end) == \"snap-end\"\n",
+    "    assert str(snap_align.center) == \"snap-center\"\n",
+    "    assert str(snap_align.none) == \"snap-align-none\"\n",
     "    \n",
     "    # Snap stop\n",
-    "    assert snap_stop.normal == \"snap-normal\"\n",
-    "    assert snap_stop.always == \"snap-always\"\n",
+    "    assert str(snap_stop.normal) == \"snap-normal\"\n",
+    "    assert str(snap_stop.always) == \"snap-always\"\n",
     "    \n",
     "    # Snap type\n",
-    "    assert snap.none == \"snap-none\"\n",
-    "    assert snap.x == \"snap-x\"\n",
-    "    assert snap.y == \"snap-y\"\n",
-    "    assert snap.both == \"snap-both\"\n",
-    "    assert snap.mandatory == \"snap-mandatory\"\n",
-    "    assert snap.proximity == \"snap-proximity\"\n",
+    "    assert str(snap.none) == \"snap-none\"\n",
+    "    assert str(snap.x) == \"snap-x\"\n",
+    "    assert str(snap.y) == \"snap-y\"\n",
+    "    assert str(snap.both) == \"snap-both\"\n",
+    "    assert str(snap.mandatory) == \"snap-mandatory\"\n",
+    "    assert str(snap.proximity) == \"snap-proximity\"\n",
     "\n",
     "# Run the tests\n",
     "test_interactivity_scroll_snap_examples()"
@@ -908,16 +908,16 @@
     "#| export\n",
     "def test_interactivity_touch_action_examples():\n",
     "    \"\"\"Test touch action utilities.\"\"\"\n",
-    "    assert touch.auto == \"touch-auto\"\n",
-    "    assert touch.none == \"touch-none\"\n",
-    "    assert touch.pan_x == \"touch-pan-x\"\n",
-    "    assert touch.pan_left == \"touch-pan-left\"\n",
-    "    assert touch.pan_right == \"touch-pan-right\"\n",
-    "    assert touch.pan_y == \"touch-pan-y\"\n",
-    "    assert touch.pan_up == \"touch-pan-up\"\n",
-    "    assert touch.pan_down == \"touch-pan-down\"\n",
-    "    assert touch.pinch_zoom == \"touch-pinch-zoom\"\n",
-    "    assert touch.manipulation == \"touch-manipulation\"\n",
+    "    assert str(touch.auto) == \"touch-auto\"\n",
+    "    assert str(touch.none) == \"touch-none\"\n",
+    "    assert str(touch.pan_x) == \"touch-pan-x\"\n",
+    "    assert str(touch.pan_left) == \"touch-pan-left\"\n",
+    "    assert str(touch.pan_right) == \"touch-pan-right\"\n",
+    "    assert str(touch.pan_y) == \"touch-pan-y\"\n",
+    "    assert str(touch.pan_up) == \"touch-pan-up\"\n",
+    "    assert str(touch.pan_down) == \"touch-pan-down\"\n",
+    "    assert str(touch.pinch_zoom) == \"touch-pinch-zoom\"\n",
+    "    assert str(touch.manipulation) == \"touch-manipulation\"\n",
     "\n",
     "# Run the tests\n",
     "test_interactivity_touch_action_examples()"
@@ -962,10 +962,10 @@
     "#| export\n",
     "def test_interactivity_user_select_examples():\n",
     "    \"\"\"Test user select utilities.\"\"\"\n",
-    "    assert select.none == \"select-none\"\n",
-    "    assert select.text == \"select-text\"\n",
-    "    assert select.all == \"select-all\"\n",
-    "    assert select.auto == \"select-auto\"\n",
+    "    assert str(select.none) == \"select-none\"\n",
+    "    assert str(select.text) == \"select-text\"\n",
+    "    assert str(select.all) == \"select-all\"\n",
+    "    assert str(select.auto) == \"select-auto\"\n",
     "\n",
     "# Run the tests\n",
     "test_interactivity_user_select_examples()"
@@ -1046,10 +1046,10 @@
     "def test_interactivity_will_change_examples():\n",
     "    \"\"\"Test will-change utilities.\"\"\"\n",
     "    # Standard values\n",
-    "    assert will_change.auto == \"will-change-auto\"\n",
-    "    assert will_change.scroll == \"will-change-scroll\"\n",
-    "    assert will_change.contents == \"will-change-contents\"\n",
-    "    assert will_change.transform == \"will-change-transform\"\n",
+    "    assert str(will_change.auto) == \"will-change-auto\"\n",
+    "    assert str(will_change.scroll) == \"will-change-scroll\"\n",
+    "    assert str(will_change.contents) == \"will-change-contents\"\n",
+    "    assert str(will_change.transform) == \"will-change-transform\"\n",
     "    \n",
     "    # Custom properties and arbitrary values\n",
     "    assert will_change(\"--custom-property\") == \"will-change---custom-property\"\n",
