--- a/nbs/utilities/sizing.ipynb
+++ b/nbs/utilities/sizing.ipynb
@@ -459,7 +459,7 @@
     "    \n",
     "    # Test different ways to use container\n",
     "    assert str(container) == \"container\"\n",
-    "    assert container() == \"container\"\n",
+    "    assert str(container()) == \"container\"\n",
     "    assert container.build() == \"container\"\n",
     "\n",
     "# Run the tests\n",
