--- a/nbs/utilities/spacing.ipynb
+++ b/nbs/utilities/spacing.ipynb
@@ -358,7 +358,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "from cjm_fasthtml_tailwind.core.base import BaseFactory, SingleValueFactory\n",
+    "from cjm_fasthtml_tailwind.core.base import BaseFactory, SingleValueFactory, SingleValueUtility\n",
     "\n",
     "# Create space between factories\n",
     "# Note: space utilities use a hyphenated prefix pattern\n",
@@ -647,6 +647,47 @@
     "\n",
     "# Run the tests\n",
     "test_spacing_modifier_examples()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "152a5h4i8n3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def test_spacing_enhanced_factory_examples(\n",
+    "):\n",
+    "    \"\"\"Test enhanced SingleValueFactory support in spacing utilities.\"\"\"\n",
+    "    # Test space reverse utilities with modifiers\n",
+    "    assert str(space.x_reverse) == \"space-x-reverse\"\n",
+    "    assert str(space.x_reverse.hover) == \"hover:space-x-reverse\"\n",
+    "    \n",
+    "    assert str(space.y_reverse) == \"space-y-reverse\"\n",
+    "    assert str(space.y_reverse.md) == \"md:space-y-reverse\"\n",
+    "    assert str(space.y_reverse.dark) == \"dark:space-y-reverse\"\n",
+    "    \n",
+    "    # Test combining space utilities with modifiers\n",
+    "    from fasthtml.common import Div, Ul, Li\n",
+    "    \n",
+    "    # Responsive list spacing\n",
+    "    list_container = Ul(\n",
+    "        Li(\"Item 1\"),\n",
+    "        Li(\"Item 2\"),\n",
+    "        Li(\"Item 3\"),\n",
+    "        cls=combine_classes(\n",
+    "            space.y(2),           # Default spacing\n",
+    "            space.y(4).md,        # Larger spacing on medium screens\n",
+    "            \"flex flex-col\"\n",
+    "        )\n",
+    "    )\n",
+    "    \n",
+    "    assert \"space-y-2\" in list_container.attrs['class']\n",
+    "    assert \"md:space-y-4\" in list_container.attrs['class']\n",
+    "\n",
+    "# Run the tests\n",
+    "test_spacing_enhanced_factory_examples()"
    ]
   },
   {
